updated for assignment 6 part 1

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,12 +1,21 @@
 .PHONY: default check-cross-compile
+
+CC = gcc
+OBJ = aesdsocket
+HEADER = aesdsocket.h
+CFLAGS = -g -Wall -Werror -pthread
+
+
 default: all
 
-all:
+all: aesdsocket.c $(HEADER)
 ifndef CROSS_COMPILE
 	CROSS_COMPILE=""
 endif
 
-	$(CROSS_COMPILE)gcc aesdsocket.c -o aesdsocket -g -Wall -Werror
+	#$(CROSS_COMPILE)gcc aesdsocket.c -o aesdsocket -g -Wall -Werror
+	$(CROSS_COMPILE)$(CC) aesdsocket.c -o $(OBJ) $(CFLAGS) 
+	#$(CROSS_COMPILE)$(CC) $(CFLAGS) $< -o $(OBJ)  
 
 
 clean:
